fixing stack overflow data + adding kibibit cli

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -68,27 +68,14 @@
 
   #DIV_11,
   #DIV_2 {
-    margin: 15px 20px 0 0;
+    margin: 15px 0 0 0;
   }
 
   #DIV_2 {
     box-sizing: border-box;
     color: rgb(36, 39, 41);
     display: flex;
-    height: 60px;
-    min-height: auto;
-    min-width: auto;
-    text-align: center;
-    text-decoration: none solid rgb(36, 39, 41);
-    width: 146.292px;
-    column-rule-color: rgb(36, 39, 41);
-    align-items: center;
-    perspective-origin: 73.1458px 30px;
-    transform-origin: 73.1458px 30px;
-    caret-color: rgb(36, 39, 41);
-    border: 0 none rgb(36, 39, 41);
-    font: normal normal normal normal 13px / 16.9px Arial, "Helvetica Neue", Helvetica, sans-serif;
-    outline: rgb(36, 39, 41) none 0;
+    width: 100%;
   }
   /*#DIV_2*/
   #DIV_12,
@@ -220,76 +207,23 @@
   #DIV_8 {
     box-sizing: border-box;
     color: rgb(36, 39, 41);
-    height: 27.3333px;
-    min-height: auto;
-    min-width: auto;
     text-align: left;
-    text-decoration: none solid rgb(36, 39, 41);
-    width: 76.2917px;
-    column-rule-color: rgb(36, 39, 41);
     align-self: center;
-    perspective-origin: 38.1458px 13.6667px;
-    transform-origin: 38.1458px 13.6667px;
-    caret-color: rgb(36, 39, 41);
-    border: 0 none rgb(36, 39, 41);
-    font: normal normal normal normal 13px / 16.9px Arial, "Helvetica Neue", Helvetica, sans-serif;
-    outline: rgb(36, 39, 41) none 0;
   }
   /*#DIV_8*/
   #SPAN_9 {
-    bottom: 0;
-    box-sizing: border-box;
     color: rgb(57, 115, 157);
     display: inline-block;
     height: 23.5833px;
-    left: 0;
-    position: relative;
-    right: 0;
     text-align: center;
-    text-decoration: none solid rgb(57, 115, 157);
-    top: 0;
     white-space: nowrap;
-    width: 32px;
-    column-rule-color: rgb(57, 115, 157);
-    perspective-origin: 16px 11.7917px;
-    transform-origin: 16px 11.7917px;
-    caret-color: rgb(57, 115, 157);
     background: rgb(225, 236, 244) none repeat scroll 0 0 / auto padding-box border-box;
-    border: 1px solid rgba(0, 0, 0, 0);
     font: normal normal normal normal 12px / 12px Arial, "Helvetica Neue", Helvetica, sans-serif;
     margin: 2px 2px 2px 0;
     outline: rgb(57, 115, 157) none 0;
     padding: 4.8px 6px;
     transition: all 0.15s ease-in-out 0s;
   }
-  /*#SPAN_9*/
-  #SPAN_10 {
-    bottom: 0;
-    box-sizing: border-box;
-    color: rgb(57, 115, 157);
-    display: inline-block;
-    height: 23.5833px;
-    left: 0;
-    position: relative;
-    right: 0;
-    text-align: center;
-    text-decoration: none solid rgb(57, 115, 157);
-    top: 0;
-    white-space: nowrap;
-    width: 36.6771px;
-    column-rule-color: rgb(57, 115, 157);
-    perspective-origin: 18.3333px 11.7917px;
-    transform-origin: 18.3333px 11.7917px;
-    caret-color: rgb(57, 115, 157);
-    background: rgb(225, 236, 244) none repeat scroll 0 0 / auto padding-box border-box;
-    border: 1px solid rgba(0, 0, 0, 0);
-    font: normal normal normal normal 12px / 12px Arial, "Helvetica Neue", Helvetica, sans-serif;
-    margin: 2px 2px 2px 0;
-    outline: rgb(57, 115, 157) none 0;
-    padding: 4.8px 6px;
-    transition: all 0.15s ease-in-out 0s;
-  }
-  /*#SPAN_10*/
   #DIV_11 {
     box-sizing: border-box;
     color: rgb(36, 39, 41);
